--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ nav.sticky .menu-btn {
 .home {
   height: 100vh;
   width: 100%;
-  background: url("image/back.gif") no-repeat;
+  background: url("back.gif") no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
